Wed Jun 17 00:31:30 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* test/ruby/test_argf.rb (TestArgf#test_skip): updated test
	  according to clarified behavior.

Tue Jun 16 22:47:37 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (fptr_finalize): revert last change.  [ruby-dev:38648]

	* io.c (fptr_finalize): skip close(2) for fd 0,1,2.

Tue Jun 16 20:07:09 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (transcode_restartable0): refix can't build with VC9.

Tue Jun 16 16:09:59 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* parse.y (parser_read_escape, parser_tokadd_escape): 
	  replace scan_oct as ruby_scan_oct.

Tue Jun 16 06:40:31 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (fptr_finalize): should close stdin/stdout/stderr when
	  closed explicitly.   [ruby-core:23853]

	* io.c (argf_skip): should close only when current_file is available.

Tue Jun 16 01:50:02 2009  Tanaka Akira  <akr@fsij.org>

	* vm_eval.c (rb_call0): refine exception message for hidden objects.

Mon Jun 15 22:35:31 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* bignum.c (rb_big2db): (-Float::MAX.to_i*2).to_f should return
	  -HUGE_VAL (-Infinity).

Mon Jun 15 18:48:41 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_each_line): should return self.  [ruby-core:23852]

	* io.c (argf_each_byte, argf_each_char): ditto.

Mon Jun 15 17:48:42 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (os_obj_of): invoke garbage collection before iteration, to
	  avoid accessing half recycled object references.  [ruby-dev:38613]

Mon Jun 15 11:04:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* .gdbinit (rp, iseq): load dummy_gdb_enums on demand.
	  [ruby-dev:38606]

Sun Jun 14 14:57:57 2009  Koichi Sasada  <ko1@atdot.net>

	* thread.c, vm_eval.c: add Thread.backtrace. 

	* test/ruby/test_thread.rb: add a test.

Sun Jun 14 13:58:32 2009  Koichi Sasada  <ko1@atdot.net>

	* transcode.c (transcode_restartable0): revert last commit because