@@ -1,3 +1,7 @@
+Wed Jun 17 06:05:03 2009  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_objspace_each_objects): New C API, added.
+
 Wed Jun 17 00:31:30 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* test/ruby/test_argf.rb (TestArgf#test_skip): updated test
